# ESP-Mindiff

./: .env.example  .gitignore  README.md  dockerfile  index.html  mise.toml  pyproject.toml
.github/workflows/: build-android-apk-dev.yml  build-android-apk.yml  ci-app.yml  ci-back.yml  ci-iot.yml  deploy-back-web.yml
App/: .dockerignore  .gitignore  README.md  pubspec.yaml
App/android/: gradle.properties
App/app/: Dockerfile.web  pubspec.yaml
App/docs/: audit_standards.md  formules.md  services.md
App/lib/: app.dart  main.dart  navigation_menu.dart
App/linux/: CMakeLists.txt
App/test/: widget_test.dart
App/web/: index.html  manifest.json
App/windows/: CMakeLists.txt
Back/: .coverage  .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  mise.toml  pyproject.toml  pytest.ini
Back/app/: main.py
Back/docker/: docker-compose.yml
Back/docs/: formules.md
Back/scripts/: download_gifs.py  exercises.json  import_exercices.py  migrate_gif_urls.py  seed_db.py  seed_exercises.py  seed_vault.py
Back/tests/: conftest.py  test_main.py
IOT/Mindiff_Balance/: .gitignore  diagram.json  platformio.ini  wokwi.toml
Mindiff_Balance/: platformio.ini
Mindiff_Balance/src/: main.cpp
alembic/: env.py
app/: main.py  pubspec.yaml
app/api/: auth.py  user.py  (+4 more)
css/: styles.css
docker/: docker-compose.yml
docs/: Mindiff_documentation_utilisateur.docx  architecture-credentials.md
js/: main.js
mindiff-website/: dockerfile  index.html
scripts/: import_exercices.py  seed_vault.py
web/: index.html
(+281 files in other folders)
